--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,4 @@ untitled-video-player = "main:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-
-[tool.setuptools.packages.find]
-where = ["src"]
+py-modules = ["main"]
