--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ untitled-video-player = "main:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+py-modules = ["main"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["*"]
