--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ package-dir = {"" = "src"}
 py-modules = ["main", "theme", "media_controller", "shortcut_manager", "mpris_interface"]
 
 [tool.setuptools.package-data]
-untitled-video-player = ["assets/*.svg"]
+untitled_video_player = ["assets/*.svg"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
